# ChargeFlow

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py
app/: __init__.py  dashboard_data.py  streamlit_app.py
configs/: base.yaml
demo_assets/ml/: exploratory_summary.json  failure_risk_predictions.csv
demo_assets/synthetic/: augmented_stations.csv  maintenance_notes.csv  maintenance_tickets.csv
demo_assets/warehouse/: gold_station_daily_metrics.csv  gold_station_health.csv
docs/: architecture.md  day1_foundation.md  day2_synthetic_generation.md  day3_warehouse.md  day4_ml.md  day5_services.md  demo_runbook.md  power_bi.md  vercel_deploy.md
docs/sops/: connector_reset.md  network_recovery.md  thermal_alarm_response.md
public/: index.html
scripts/: export_powerbi.py
sql/: warehouse_schema.sql  warehouse_transform_clean.sql  warehouse_transform_gold.sql
src/: __init__.py
src/ingestion/: __init__.py  cli.py  energy.py  pipeline.py  stations.py  weather.py
src/ml/: __init__.py  analytics.py  cli.py  features.py  pipeline.py
src/rag/: __init__.py  cli.py  service.py
src/recommender/: __init__.py  service.py
src/synthetic/: __init__.py  cli.py  loaders.py  pipeline.py  templates.py
src/utils/: __init__.py  assets.py  config.py  filesystem.py  http.py  logging.py
src/warehouse/: __init__.py  cli.py  io.py  pipeline.py  quality.py
tests/: test_api_endpoints.py  test_config.py  test_day5_services.py  test_day6_exports.py  test_ml_pipeline.py  test_synthetic_pipeline.py  test_warehouse_pipeline.py
