[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chargeflow"
version = "0.1.0"
description = "AI-assisted EV charging reliability and analytics platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6.0,<7.0",
  "requests>=2.32,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1,<9.0",
]

[project.scripts]
chargeflow-ingest = "src.ingestion.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
